# ssvi

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-05-iv-ssvi-scanner.md
scripts/: probe_api.py
src/ssvi/: __main__.py  bs.py  chain.py  clean.py  cli.py  config.py  metrics.py  plots.py  polygon_client.py  signals.py  ssvi.py  stocks.py  store.py  svi.py
tests/: test_bs.py  test_chain.py  test_clean.py  test_cli.py  test_config.py  test_metrics.py  test_plots.py  test_polygon_client.py  test_signals.py  test_ssvi.py  test_stocks.py  test_store.py  test_svi.py
tests/fixtures/: snapshot_page.json
